--- a/style.css
+++ b/style.css
@@ -3,7 +3,21 @@
     padding: 0;
 }
 
+body{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 7fr 1fr;
+}
 
+.workPlace{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: blue;
+}
 
 form{
     display: flex;
@@ -13,5 +27,47 @@ form{
     background-color: aqua;
     margin-top: 20px;
     border: 2px solid black;
-    
+    margin: 20px;
+    gap: 10px;
 }
+ 
+.board{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 2fr 7fr;
+}
+
+.info{
+    display: flex;
+    justify-self: center;
+    margin: 10px;
+    gap: 200px;
+}
+
+.info > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#userNameOne, #userNameTwo{
+    width: 200px;
+    height: 30px;
+    background-color: blueviolet;
+} 
+
+.gameBoard{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gridBoard{
+    width: 300px;
+    height: 300px;
+    background-color: seagreen;
+}
+
+
+
