--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: blue;
+    background-color: gray;
 }
 
 form{
     display: flex;
     flex-direction: column;
     width: 200px;
-    height: 100px;
+    height: 120px;
     background-color: aqua;
     margin-top: 20px;
     border: 2px solid black;
@@ -66,7 +66,24 @@ form{
 .gridBoard{
     width: 300px;
     height: 300px;
-    background-color: seagreen;
+    background-color: rgb(15 23 42);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    padding: 10px;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: span 1;
+    background-color: rgb(217 119 6);
+}
+
+.item:hover{
+    background-color:  rgb(217 90 6);
 }
 
 
