--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ form{
     justify-content: center;
     grid-column: span 1;
     background-color: rgb(217 119 6);
+    user-select: none;
 }
 
 .item:hover{
