--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ form{
     width: 200px;
     height: 30px;
     background-color: blueviolet;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
 } 
 
 .gameBoard{
