--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
     padding: 0;
 }
 
-body{
+body {
     width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 7fr 1fr;
 }
 
-.workPlace{
+.workPlace {
     grid-row-start: 2;
     grid-row-end: 3;
     width: 100%;
@@ -19,7 +19,17 @@ body{
     background-color: gray;
 }
 
-form{
+.menu {
+    display: flex;
+    flex-direction: column;
+}
+
+.reset {
+    height: 30px;
+    margin: 20px;
+}
+
+form {
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -31,27 +41,27 @@ form{
     gap: 10px;
 }
  
-.board{
+.board {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: 2fr 7fr;
 }
 
-.info{
+.info {
     display: flex;
     justify-self: center;
     margin: 10px;
     gap: 200px;
 }
 
-.info > div{
+.info > div {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#userNameOne, #userNameTwo{
+#userNameOne, #userNameTwo {
     width: 200px;
     height: 30px;
     background-color: blueviolet;
@@ -61,13 +71,13 @@ form{
     color: white;
 } 
 
-.gameBoard{
+.gameBoard {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.gridBoard{
+.gridBoard {
     width: 300px;
     height: 300px;
     background-color: rgb(15 23 42);
