addWinnerStyle is work

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ form {
     width: 200px;
     height: 30px;
     background-color: blueviolet;
-    border: 2px solid green;
+    border: 2px solid greenyellow;
 }
 
 
