--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 7fr 1fr;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);;
 }
 
 .workPlace {
@@ -16,7 +17,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: gray;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 .menu {
@@ -32,13 +33,34 @@ body {
 form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 200px;
     height: 120px;
-    background-color: aqua;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
     margin-top: 20px;
-    border: 2px solid black;
     margin: 20px;
     gap: 10px;
+    border-radius: 7px;
+    box-shadow: 10px 7px 10px 5px white;
+}
+
+form > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form > div > input {
+    border-radius: 7px;
+    padding-left: 5px;
+}
+
+form > button {
+    padding: 2px;
+    border-radius: 7px;
 }
  
 .board {
@@ -69,6 +91,8 @@ form {
     align-items: center;
     justify-content: center;
     color: white;
+    font-size: 20px;
+    font-weight: 700;
 } 
 
 .gameBoard {
@@ -80,12 +104,21 @@ form {
 .gridBoard {
     width: 300px;
     height: 300px;
-    background-color: rgb(15 23 42);
+    background-color: #F0E83A;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    padding: 10px;
+    gap: 7px;
+    padding: 7px;
+    border-radius: 7px;
+    box-shadow:  20px 15px 80px 16px black;
+}
+
+#userNameOne, #userNameTwo {
+    border-radius: 7px;
+    background: black;
+    opacity: 0.7;
+    color: white;
 }
 
 .item {
@@ -93,33 +126,44 @@ form {
     align-items: center;
     justify-content: center;
     grid-column: span 1;
-    background-color: rgb(217 119 6);
+    background-color: rgb(217, 119, 6);
+    border-radius: 7px;
     user-select: none;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .item:hover {
-    background-color:  rgb(217 90 6);
+    background-color:  rgb(217, 90, 6);
 }
 
 .activePlayer {
     width: 200px;
     height: 30px;
     background-color: blueviolet;
-    border: 2px solid gold;
+    border: 5px solid gold;
 }
 
 .draw {
     width: 200px;
     height: 30px;
     background-color: blueviolet;
-    border: 2px solid red;
+    border: 5px solid red;
 }
 
 .winner {
     width: 200px;
     height: 30px;
     background-color: blueviolet;
-    border: 2px solid greenyellow;
+    border: 5px solid greenyellow;
+}
+
+.reset {
+    border-radius: 7px;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+    box-shadow: 10px 7px 10px 5px white;
 }
 
 
